--- a/sass_lib/_base.scss
+++ b/sass_lib/_base.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: $primary;
+  // background-color: $primary;
   font-family: "Poppins";
   @include sm {
     background-color: beige;
