--- a/sass_lib/_utils.scss
+++ b/sass_lib/_utils.scss
@@ -2,6 +2,8 @@
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0 20px;
   box-sizing: border-box;
 }
