--- a/sass_lib/_variables.scss
+++ b/sass_lib/_variables.scss
@@ -11,7 +11,7 @@ $base-margin: 0.75rem;
 //borders
 $base-border-thickness: 1px;
 $base-border-radius: 20px;
-$base-box-shadow: 1px 3px 5px rbga(0, 0, 0, 0.1);
+$base-box-shadow: 1px 3px 5px 5px rgba(0, 0, 0, 0.2);
 
 //color palette
 $colors: (
